Plugin Name: Post Voting
Author: Ve Bailovity (Incsub)

Change Log:
----------------------------------------------------------------------
----------------------------------------------------------------------

2.2.3 - 2015-07-02
----------------------------------------------------------------------
- Added filter in Network widget to change posts permalinks

2.2.2 - 2014-08-25
----------------------------------------------------------------------
- Fixed: Added missing translated strings.

2.2.1 - 2014-08-21
----------------------------------------------------------------------
- Fixed: Post types in Settings Page were not being translated

2.2 - 2014-08-18
----------------------------------------------------------------------
- Enhanced: Splitting settings into tabs for a better redeability.
- Fixed: Many strings were not translation-ready. 
- Fixed: Fixing warnings that were breaking Ajax response.

2.1.6 - 2011-01-17
----------------------------------------------------------------------
- Added compatibility template tags for single site installs.

2.1.5 - 2011-01-08
----------------------------------------------------------------------
- SSL support.
- Using prepared and verified blog ID.

2.1.4 - 2011-12-11
----------------------------------------------------------------------
- Fix for voting statistics on single site installs.

2.1.3 - 2011-12-08
----------------------------------------------------------------------
- Added user link to voting activity creation procedure.

2.1.2 - 2011-11-30
----------------------------------------------------------------------
- Fix for BuddyPress options integration.

2.1.1 - 2011-11-28
----------------------------------------------------------------------
- Fix for single site network resolution.
- Fix for result getting template tag.

2.1 - 2011-11-20
----------------------------------------------------------------------
- Added support for Add-ons.
- Added new daily voting add-on.

2.0.2 - 2011-10-30