@@ -10,6 +10,13 @@ class Wdpv_WidgetNetworkPopular extends WP_Widget {
 	}
 
 	function form ($instance) {
+        $defaults = array(
+            'title' => '',
+            'limit' => 5,
+            'voted_timeframe' => 'this_week'
+        );
+
+        $instance = wp_parse_args( $instance, $defaults );
 		$title = esc_attr($instance['title']);
 		$limit = esc_attr($instance['limit']);
 		$voted_timeframe = esc_attr($instance['voted_timeframe']);
