@@ -8,6 +8,7 @@ Change Log:
 2.2.3 - 2015-07-02
 ----------------------------------------------------------------------
 - Added filter in Network widget to change posts permalinks
+- Fixed several warnings on widget screen
 
 2.2.2 - 2014-08-25
 ----------------------------------------------------------------------
